[package]
name = "NeuroQuant-SafeCity"
version = "1.0.0"
edition = "2021"
authors = ["Doctor0Evil", "Perplexity AI"]
license = "MIT"
description = "Secure human-machine quantization framework for safe smart-city actuation"
repository = "https://github.com/Doctor0Evil/NeuroQuant-SafeCity"

[dependencies]
rand = "0.8"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version="1", features=["full"] }
aes-gcm = "0.10"
hex = "0.4"
sha2 = "0.10"
